2006-12-05  Daniel Macks  <dmacks@netspace.org>

	* Configure.pm: Add interactive control for enabling "unstable"

2006-12-05  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm, PkgVersion.pm, Validation.pm: Switch to Depends-based
	sentinel of obsolete packages.

2006-12-04  Dave Morrison  <drm@finkproject.org>

	* PkgVersion.pm: Implement the new %type_num[] and %lib percent
	expansions.
	* Validation.pm: Implement the new %type_num[] and %lib percent
        expansions.  Correct the regex for detecting library architecture.
	* PkgVersion.pm: New default for LDFLAGS when building 64bit libs.
	
2006-12-03  Dave Morrison  <drm@finkproject.org>

	* Validation.pm: Check for correct library architecture at the end
	of each Shlibs entry.  (If present, it should have value 32, 64, or
	32-64.)

2006-11-31  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Validation.pm: utf8 should be allowed, but not sure how to
	check on it; changing the warning to say "non-ASCII" instead of
	"non-standard" for now  :(

2006-11-29  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Implement --env for dumpinfo to display specific env
	vars in a form suitable to be "eval"ed

2006-11-28  Daniel Macks  <dmacks@netspace.org>

	* NetAccess.pm: Don't add the master-mirrors pool if Source is
	already a mirror:master URL.

2006-11-23  Matthew Sachs  <msachs@apple.com>

	* Config.pm: maintainermode should turn on verbose.  Happy
	Thanksgiving!

2006-11-16  Matthew Sachs  <msachs@apple.com>

	* Config.pm: Be a bit stricter about --tests argument checking.

2006-11-14  Matthew Sachs  <msachs@apple.com>

	* Config.pm: Fix for --tests with no value.

2006-11-14  Matthew Sachs  <msachs@apple.com>

	* Config.pm: Add --tests, --validate options.
	* Engine.pm: Ditto.
	* PkgVersion.pm: Ditto, plus fix for uninitialized value warning in
	InfoTest processing.

2006-11-14  Matthew Sachs  <msachs@apple.com>

	* Validation.pm: Don't require TestScript.

2006-11-07  Daniel Macks  <dmacks@netspace.org>
